@@ -1,5 +1,11 @@
 2004-11-30  Sarfraaz Ahmed <asarfraaz@novell.com>
 
+	* addressbook/e-book-backend-exchange.c 
+	(e_book_backend_exchange_set_mode) : This sets the mode to either 
+	online/offline.
+
+2004-11-30  Sarfraaz Ahmed <asarfraaz@novell.com>
+
 	* calendar/e-cal-backend-exchange.c (get_mode): Now returns the proper
 	mode of the calendar [ online/offline ]
 	(set_mode) : Sets the calendar mode to online/offline
